# RocketChat

./: CMakeLists.txt  README.md
include/: ChatServer.h  ConnectionGuard.h  MysqlPool.h  RedisMgr.h  ThreadPool.h
src/: ChatServer.cpp  ConnectionGuard.cpp  MysqlPool.cpp  RedisMgr.cpp  ThreadPool.cpp  client.cpp  main.cpp
